modal css fixes

--- a/examples/css/styles-ios.css
+++ b/examples/css/styles-ios.css
@@ -446,7 +446,6 @@ nav a {
   background: -webkit-linear-gradient(top, #ffffff, #cccccc);
   background: -moz-linear-gradient(top, #ffffff, #cccccc);
   background: -o-linear-gradient(top, #ffffff, #cccccc);
-  background: -ms-linear-gradient(top, #ffffff, #cccccc);
   background: linear-gradient(top, #ffffff, #cccccc);
   border-top: 1px solid #666;
   border-right: 1px solid #666;
@@ -499,7 +498,6 @@ nav a {
   background: -webkit-linear-gradient(top, #daeaec, #cee3e6);
   background: -moz-linear-gradient(top, #daeaec, #cee3e6);
   background: -o-linear-gradient(top, #daeaec, #cee3e6);
-  background: -ms-linear-gradient(top, #daeaec, #cee3e6);
   background: linear-gradient(top, #daeaec, #cee3e6);
   border-top-color: #AEBBBD;
   border-bottom-color: #AEBBBD;
@@ -603,7 +601,6 @@ nav a {
   background: -webkit-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -moz-radial-gradient(#ffffff, #a6c9fd 6px);
   background: -o-radial-gradient(#ffffff, #a6c9fd 6px);
-  background: -ms-radial-gradient(#ffffff, #a6c9fd 6px);
   background: radial-gradient(#ffffff, #a6c9fd 6px);
   border-radius: 0.5em;
   -webkit-box-shadow: 0 0 2px 2px #666666;
@@ -661,7 +658,6 @@ nav a {
   background: -webkit-linear-gradient(top, #ffffff, #bdd7fd);
   background: -moz-linear-gradient(top, #ffffff, #bdd7fd);
   background: -o-linear-gradient(top, #ffffff, #bdd7fd);
-  background: -ms-linear-gradient(top, #ffffff, #bdd7fd);
   background: linear-gradient(top, #ffffff, #bdd7fd);
   -webkit-box-shadow: 0 0 2px 2px #666666;
   -moz-box-shadow: 0 0 2px 2px #666666;
@@ -676,7 +672,6 @@ nav a {
   background-image: -webkit-linear-gradient(top, #dddddd, #ffffff 45%);
   background-image: -moz-linear-gradient(top, #dddddd, #ffffff 45%);
   background-image: -o-linear-gradient(top, #dddddd, #ffffff 45%);
-  background-image: -ms-linear-gradient(top, #dddddd, #ffffff 45%);
   background-image: linear-gradient(top, #dddddd, #ffffff 45%);
   border: 1px solid #666;
   border-radius: 0.5em;
@@ -704,7 +699,6 @@ nav a {
   background-image: -webkit-linear-gradient(top, #ffffff, #dedede);
   background-image: -moz-linear-gradient(top, #ffffff, #dedede);
   background-image: -o-linear-gradient(top, #ffffff, #dedede);
-  background-image: -ms-linear-gradient(top, #ffffff, #dedede);
   background-image: linear-gradient(top, #ffffff, #dedede);
   border: 1px solid #666;
   border-radius: 0.5em;
@@ -766,7 +760,7 @@ nav a {
 
 /* line 5, ../../source/css/sass/_mootor.ui.overlay.scss */
 .moo-overlay {
-  background-color: #f7f7f7;
+  background-color: #dedede;
   position: absolute;
   top: 0;
   left: 0;
@@ -887,25 +881,26 @@ nav a {
   -o-border-radius: 6px;
   border-radius: 6px;
   color: #333;
+  text-align: center;
   padding: 0.5em;
-  position: relative;
-  top: 10%;
+  position: absolute;
+  top: 20%;
   left: 10%;
   width: 80%;
   height: auto;
   z-index: 1500;
 }
-/* line 27, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 28, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-container header {
   color: #FFF;
-  text-shadow: #aaaaaa 0px 0px 1px;
+  text-shadow: 0px 0px 1px #aaaaaa;
 }
-/* line 30, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 31, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-container header h1 {
   margin: 0;
 }
 
-/* line 35, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 36, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
@@ -919,27 +914,28 @@ nav a {
   margin: 0 auto;
   /* Pasar estos a estilos de botones genericos */
 }
-/* line 42, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 43, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-title {
   color: #000;
   font-size: 2em;
   font-weight: 700;
   white-space: nowrap;
+  margin: .8em .5em;
 }
-/* line 48, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 50, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-text {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5em;
   line-height: 120%;
   padding: 0;
-  margin: 0.5em;
+  margin: .75em .6em;
 }
-/* line 57, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 59, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-buttons {
   margin: 1.5em 0 0;
   overflow: hidden;
 }
-/* line 59, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 61, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-ui-cancel,
 .moo-ui-modal-panel .moo-ui-submit {
   -webkit-border-radius: 5px;
@@ -950,9 +946,9 @@ nav a {
   font-size: 1.5em;
   font-weight: 700;
   line-height: 200%;
-  width: 49%;
+  width: 49.5%;
 }
-/* line 66, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 68, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-ui-cancel {
   display: inline;
   float: left;
@@ -960,11 +956,10 @@ nav a {
   background: -webkit-linear-gradient(top, #eeeeee, #cccccc);
   background: -moz-linear-gradient(top, #eeeeee, #cccccc);
   background: -o-linear-gradient(top, #eeeeee, #cccccc);
-  background: -ms-linear-gradient(top, #eeeeee, #cccccc);
   background: linear-gradient(top, #eeeeee, #cccccc);
   border: 1px solid #c1c1c1;
 }
-/* line 71, ../../source/css/sass/_mootor.ui.modal.scss */
+/* line 73, ../../source/css/sass/_mootor.ui.modal.scss */
 .moo-ui-modal-panel .moo-ui-submit {
   display: inline;
   float: right;
@@ -972,7 +967,6 @@ nav a {
   background: -webkit-linear-gradient(top, #cccccc, #888888);
   background: -moz-linear-gradient(top, #cccccc, #888888);
   background: -o-linear-gradient(top, #cccccc, #888888);
-  background: -ms-linear-gradient(top, #cccccc, #888888);
   background: linear-gradient(top, #cccccc, #888888);
   border: 1px solid #a1a1a1;
   color: #FFF;
@@ -1381,7 +1375,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, #747a85, #393b41);
   background: -moz-linear-gradient(top, #747a85, #393b41);
   background: -o-linear-gradient(top, #747a85, #393b41);
-  background: -ms-linear-gradient(top, #747a85, #393b41);
   background: linear-gradient(top, #747a85, #393b41);
   -webkit-box-shadow: rgba(51, 51, 51, 0.6) 0 1px 1px 0 inset, rgba(51, 51, 51, 0.3) 0 -1px 0 0 inset, rgba(255, 255, 255, 0.3) 0 1px 0 0;
   -moz-box-shadow: rgba(51, 51, 51, 0.6) 0 1px 1px 0 inset, rgba(51, 51, 51, 0.3) 0 -1px 0 0 inset, rgba(255, 255, 255, 0.3) 0 1px 0 0;
@@ -1394,7 +1387,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, #686d77, #2d2f33);
   background: -moz-linear-gradient(top, #686d77, #2d2f33);
   background: -o-linear-gradient(top, #686d77, #2d2f33);
-  background: -ms-linear-gradient(top, #686d77, #2d2f33);
   background: linear-gradient(top, #686d77, #2d2f33);
 }
 /* line 47, demo/ios/shared/_nav.scss */
@@ -1403,7 +1395,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, #747a85, #393b41);
   background: -moz-linear-gradient(top, #747a85, #393b41);
   background: -o-linear-gradient(top, #747a85, #393b41);
-  background: -ms-linear-gradient(top, #747a85, #393b41);
   background: linear-gradient(top, #747a85, #393b41);
 }
 
@@ -1413,7 +1404,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top left, #747a85, #393b41);
   background: -moz-linear-gradient(top left, #747a85, #393b41);
   background: -o-linear-gradient(top left, #747a85, #393b41);
-  background: -ms-linear-gradient(top left, #747a85, #393b41);
   background: linear-gradient(top left, #747a85, #393b41);
   border-left: 1px solid #151618;
   border-bottom: 1px solid #151618;
@@ -1442,7 +1432,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top left, #686d77, #2d2f33);
   background: -moz-linear-gradient(top left, #686d77, #2d2f33);
   background: -o-linear-gradient(top left, #686d77, #2d2f33);
-  background: -ms-linear-gradient(top left, #686d77, #2d2f33);
   background: linear-gradient(top left, #686d77, #2d2f33);
 }
 /* line 74, demo/ios/shared/_nav.scss */
@@ -1451,7 +1440,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top left, #747a85, #393b41);
   background: -moz-linear-gradient(top left, #747a85, #393b41);
   background: -o-linear-gradient(top left, #747a85, #393b41);
-  background: -ms-linear-gradient(top left, #747a85, #393b41);
   background: linear-gradient(top left, #747a85, #393b41);
 }
 
@@ -1461,7 +1449,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(bottom right, #747a85, #393b41);
   background: -moz-linear-gradient(bottom right, #747a85, #393b41);
   background: -o-linear-gradient(bottom right, #747a85, #393b41);
-  background: -ms-linear-gradient(bottom right, #747a85, #393b41);
   background: linear-gradient(bottom right, #747a85, #393b41);
   border-left: 1px solid #151618;
   border-bottom: 1px solid #151618;
@@ -1490,7 +1477,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(bottom right, #686d77, #2d2f33);
   background: -moz-linear-gradient(bottom right, #686d77, #2d2f33);
   background: -o-linear-gradient(bottom right, #686d77, #2d2f33);
-  background: -ms-linear-gradient(bottom right, #686d77, #2d2f33);
   background: linear-gradient(bottom right, #686d77, #2d2f33);
 }
 /* line 104, demo/ios/shared/_nav.scss */
@@ -1499,7 +1485,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(bottom right, #747a85, #393b41);
   background: -moz-linear-gradient(bottom right, #747a85, #393b41);
   background: -o-linear-gradient(bottom right, #747a85, #393b41);
-  background: -ms-linear-gradient(bottom right, #747a85, #393b41);
   background: linear-gradient(bottom right, #747a85, #393b41);
 }
 
@@ -1510,7 +1495,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   background: -moz-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   background: -o-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
-  background: -ms-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   background: linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   -webkit-box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 1px 0 inset, rgba(0, 0, 0, 0.7) -1px -1px 1px 0 inset, rgba(255, 255, 255, 0.3) 0 1px 0 0;
   -moz-box-shadow: rgba(0, 0, 0, 0.5) 1px 1px 1px 0 inset, rgba(0, 0, 0, 0.7) -1px -1px 1px 0 inset, rgba(255, 255, 255, 0.3) 0 1px 0 0;
@@ -1529,7 +1513,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, rgba(116, 122, 133, 0.7), rgba(33, 34, 38, 0.7));
   background: -moz-linear-gradient(top, rgba(116, 122, 133, 0.7), rgba(33, 34, 38, 0.7));
   background: -o-linear-gradient(top, rgba(116, 122, 133, 0.7), rgba(33, 34, 38, 0.7));
-  background: -ms-linear-gradient(top, rgba(116, 122, 133, 0.7), rgba(33, 34, 38, 0.7));
   background: linear-gradient(top, rgba(116, 122, 133, 0.7), rgba(33, 34, 38, 0.7));
 }
 
@@ -1841,7 +1824,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, #7c9cd6, #3964b3);
   background: -moz-linear-gradient(top, #7c9cd6, #3964b3);
   background: -o-linear-gradient(top, #7c9cd6, #3964b3);
-  background: -ms-linear-gradient(top, #7c9cd6, #3964b3);
   background: linear-gradient(top, #7c9cd6, #3964b3);
   text-shadow: #264379 0 -1px 1px;
 }
@@ -1851,7 +1833,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, #698dcf, #3359a0);
   background: -moz-linear-gradient(top, #698dcf, #3359a0);
   background: -o-linear-gradient(top, #698dcf, #3359a0);
-  background: -ms-linear-gradient(top, #698dcf, #3359a0);
   background: linear-gradient(top, #698dcf, #3359a0);
 }
 
@@ -1861,7 +1842,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top left, #ee5b46, #8f1d0d);
   background: -moz-linear-gradient(top left, #ee5b46, #8f1d0d);
   background: -o-linear-gradient(top left, #ee5b46, #8f1d0d);
-  background: -ms-linear-gradient(top left, #ee5b46, #8f1d0d);
   background: linear-gradient(top left, #ee5b46, #8f1d0d);
 }
 
@@ -2004,7 +1984,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, #777777, #444444);
   background: -moz-linear-gradient(top, #777777, #444444);
   background: -o-linear-gradient(top, #777777, #444444);
-  background: -ms-linear-gradient(top, #777777, #444444);
   background: linear-gradient(top, #777777, #444444);
 }
 
@@ -2014,7 +1993,6 @@ nav.app .moo-nav.client-accept:before {
   background: -webkit-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   background: -moz-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   background: -o-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
-  background: -ms-linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
   background: linear-gradient(top, rgba(116, 122, 133, 0.5), rgba(0, 0, 0, 0.5));
 }
 
