--- a/source/css/sass/_mootor.ui.overlay.scss
+++ b/source/css/sass/_mootor.ui.overlay.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------
 
 .moo-overlay {
-    background-color: $subColor1B; //rgba(0,0,0,.3);
+    background-color: darken($subColor1B, 10%); //rgba(0,0,0,.3);
     position: absolute;
     top: 0;
     left: 0;
