--- a/examples/css/demo/styles-ios.scss
+++ b/examples/css/demo/styles-ios.scss
@@ -34,6 +34,8 @@
 @import "base/components/buttons"; 
 @import "ios/components/buttons"; 
 
+@import "base/components/modal";
+
 @import "base/components/gallery";
 @import "ios/components/gallery";
 
