--- a/examples/css/demo/styles.scss
+++ b/examples/css/demo/styles.scss
@@ -28,6 +28,7 @@
 // generic components
 @import "base/components/buttons";
 @import "base/components/gallery";
+@import "base/components/modal";
 @import "base/components/comments";
 @import "base/shared/panels";
 
