--- a/examples/css/demo/base/components/_modal.scss
+++ b/examples/css/demo/base/components/_modal.scss
@@ -14,5 +14,12 @@
 
 // 1. mootor-modal
 // -----------------------------------------------------------------------------------
+// adds styles to a modal window with a title, message and cancel / accept buttons. 
+// parameters defaults:
+// $container-class: ".moo-ui-modal-container"
+// $panel-class: ".moo-ui-modal-panel"
+// $show-class: ".moo-show"
+// $width: large // large = 75%, medium = 50%, small = 25%
+// $buttons: 2 
+@include mootor-modal();
 
-@include mootor-modal;
