--- a/source/css/sass/_mootor.ui.modal.scss
+++ b/source/css/sass/_mootor.ui.modal.scss
@@ -12,21 +12,39 @@
     &.moo-hidden {
         display: none;
     }
+    
 }
 
 @mixin mootor-modal (
     $container-class:".moo-ui-modal-container",
     $panel-class: ".moo-ui-modal-panel",
+    $show-class: ".moo-show",
     $width: large,
-    $buttons: 2){
-        #{$container-class} {
-            background: #333;
-            @include border-radius(6px);
-            color: #333;
-            text-align: center;
-            padding: 0.5em;
-            position: absolute;
-            top:  20%;
+    $buttons: 2) {
+    #{$container-class} {
+        background: #333;
+        @include border-radius(6px);
+        color: #333;
+        text-align: center;
+        padding: 0.5em;
+        position: absolute;
+        top:  20%;
+        z-index: 1500;
+        
+        opacity: 0;
+        width: 0;
+        height: 0;
+        
+        header {
+            color: #FFF;
+            @include text-shadow;
+            h1 {
+                margin: 0;
+            }
+        }
+        &#{$show-class} {
+            height: auto;
+            opacity: 1;
             @if $width == small {
                 left: 37.5%;
                 width: 25%;
@@ -39,64 +57,63 @@
                 left: 12.5%;
                 width: 75%;
             }
-            height: auto;
-            z-index: 1500;
-            header {
-                color: #FFF;
-                @include text-shadow;
-                h1 {
-                    margin: 0;
-                }
-            }
+        @include single-transition($property: opacity);
         }
-        #{$panel-class} {
-            @include border-radius(6px);
-            background-color: #FFF;
-            width: 99.5%;
-            overflow: hidden;
-            padding: 5px;
-            margin: 0 auto;
-            .moo-title {
-                color: #000;
-                font-size: 2em;
-                font-weight: 700;
-                white-space: nowrap;
-                margin: .8em .5em;
-            }
-            .moo-text {
-                font-family: $base-font;
-                font-size: 1.5em;
-                line-height: 120%;
-                padding: 0;
-                margin: .75em .6em;
-            }
-            
-            /* Pasar estos a estilos de botones genericos */  
-            .moo-buttons { margin: 1.5em 0 0; overflow: hidden;}
-            .moo-ui-cancel, 
-            .moo-ui-submit {
-                @include border-radius(5px);
-                font-size: 1.5em;
-                font-weight: 700;
-                line-height: 200%;  
+    }
+    #{$panel-class} {
+        @include border-radius(6px);
+        background-color: #FFF;
+        width: 99.5%;
+        overflow: hidden;
+        padding: 5px;
+        margin: 0 auto;
+        .moo-title {
+            color: #000;
+            font-size: 2em;
+            font-weight: 700;
+            white-space: nowrap;
+            margin: .8em .5em;
+        }
+        .moo-text {
+            font-family: $base-font;
+            font-size: 1.5em;
+            line-height: 120%;
+            padding: 0;
+            margin: .75em .6em;
+        }
+        /* Pasar estos a estilos de botones genericos */  
+        .moo-buttons { margin: 1.5em 0 0; overflow: hidden;}
+        .moo-ui-cancel, 
+        .moo-ui-submit {
+            @extend .button;
+            @include border-radius(5px);
+            font-size: 1.5em;
+            font-weight: 700;
+            line-height: 200%;  
+        }   
+        .moo-ui-cancel {
+            @extend .button;
+            @include background(linear-gradient(top, #eee, #ccc));
+            border: 1px solid #c1c1c1;
+        }
+        .moo-ui-submit {
+            @include background(linear-gradient(top, #ccc, #888));
+            border: 1px solid #a1a1a1;
+            color: #FFF;
+        }
+        @if $buttons == 2 {
+            .moo-buttons a {
                 width: 49.5%;
-            }   
-            .moo-ui-cancel {
-                @include float-left;
-                @include background(linear-gradient(top, #eee, #ccc));
-                border: 1px solid #c1c1c1;
             }
-            .moo-ui-submit {
-                @include float-right;
-                @include background(linear-gradient(top, #ccc, #888));
-                border: 1px solid #a1a1a1;
-                color: #FFF;
+            .moo-ui-cancel { @include float-left }
+            .moo-ui-submit { @include float-right }
+        }
+        @else {
+            .moo-buttons a {
+                width: 100%;
             }
         }
     }
-
-
-
-.moo-ui-modal-panel {
     
 }
+
